JPMS in e2e-server
Signed-off-by: jansupol <jan.supol@oracle.com>